Fix layout of containers

--- a/styles.css
+++ b/styles.css
@@ -2,13 +2,15 @@ body {
     padding: 0;
     margin: 0;
     display: flex;
-    justify-content: center;
+    flex-direction: column;
+    align-items: center;
+    gap: 40px;
 }
 
 .container {
     display: flex;
     flex-wrap: wrap;
-    flex-basis: 960px;
+    max-width: 960px;
     border: 1px solid black;
 }
 
